feat: integrate Chakra UI for UI components and Easy Peasy for state management
Added Chakra UI to enhance the user interface with a modern, responsive design system. This will improve the overall user experience by providing a consistent and accessible UI.

Integrated Easy Peasy to manage application state more efficiently. This addition simplifies state management with its intuitive and Redux-like API, making the application more maintainable and scalable.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# existing entries...
+package-lock.json
+
 # Dependency directories
 node_modules/
 dist
